  * Allow broken versions starting with a dash in dpkg-maintscript-helper.
    Thanks to Carsten Hey <carsten@debian.org>.
  * Add a new treewalk module in libdpkg, with the nice properties of avoiding
    duplicate stat(2) calls, not calling find(1), and sorting the output w/o
    stalling on the entire input being slurped and sorted.
    - Use it to build the .deb data member in dpkg-deb.
  * Portability:
    - Move DPKG_ADMINDIR environment variable name out from update-alternatives
      code, to make life easier for non-dpkg-based systems.
    - Move alternatives temporary extension out from update-alternatives code,
      to make life easier for non-dpkg-based systems.
  * Perl modules:
    - Add new CTRL_REPO_RELEASE control block type to Dpkg::Control.
    - Add new CTRL_COPYRIGHT_HEADER, CTRL_COPYRIGHT_FILES and
      CTRL_COPYRIGHT_LICENSE control block types to Dpkg::Control.
    - Make patching a file multiple times fatal for the first quilt patch in
      Dpkg::Source. Reported by Apollon Oikonomopoulos <apoikos@debian.org>.
      Closes: #810720
    - Only warn once when a diff patches a file multiple times in
      Dpkg::Source::Patch, and fix the warning message to make it clear that
      the diff might be patchig the file more than once, not just twice.
    - Check existence of search criteria in Dpkg::Index when checking with a
      regex or a string match. Closes: #780906
      Base on a patch by Daniel Dehennin <daniel.dehennin@baby-gnu.org>.
  * Build system:
    - Fix building development documentation.
  * Test suite:
    - Add a unit test to compile perl code with warnings.
  * Documentation:
    - Say value instead of option in deb-control(5).
    - Mark debian changelog format in bold in dpkg-parsechangelog(1).
    - Add references to man pages describing file formats.
    - Document missing Install-Size, Built-For-Profiles and Build-Profiles
      fields in man pages.
    - Add new dsc(5), deb-changelog(5) and deb-changes(5) man pages.