@@ -39,6 +39,8 @@ dpkg (1.18.5) UNRELEASED; urgency=medium
     duplicate stat(2) calls, not calling find(1), and sorting the output w/o
     stalling on the entire input being slurped and sorted.
     - Use it to build the .deb data member in dpkg-deb.
+    - Use it to build the .deb control member in dpkg-deb.
+    Closes: #719845
   * Portability:
     - Move DPKG_ADMINDIR environment variable name out from update-alternatives
       code, to make life easier for non-dpkg-based systems.
